--- a/Green-Pharmacy/index.html
+++ b/Green-Pharmacy/index.html
@@ -3,49 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <title>Green-Pharmacy 🌱</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<header>
-  <h1>Green-Pharmacy 🌱💊</h1>
-  <p>إدارة ذكية للأدوية ببيانات صحية وبيئية حقيقية</p>
-</header>
+  <!-- ===== Header ===== -->
+  <header class="main-header">
+    <h1>🌱 Green-Pharmacy</h1>
+    <p>نظام ذكي لإدارة الأدوية اعتماداً على بيانات طبية حقيقية وتقليل الأثر البيئي</p>
+  </header>
 
-<main>
+  <div class="container">
 
-  <section class="work">
-    <h2>إدارة الأدوية</h2>
+    <!-- ===== Form Section ===== -->
+    <section class="card">
+      <h2>إدارة الأدوية</h2>
 
-    <form id="medForm">
-      <label>اختر الدواء</label>
-      <select id="medSelect" required>
-        <option value="">-- اختر دواء --</option>
-      </select>
+      <form id="medForm">
 
-      <label>تاريخ الإنتاج</label>
-      <input type="date" id="productionDate" required>
+        <label>اختر الدواء</label>
+        <select id="medSelect" required>
+          <option value="">-- اختر دواء --</option>
+        </select>
 
-      <button type="submit">تحليل الدواء</button>
-    </form>
+        <label>تاريخ الشراء</label>
+        <input type="date" id="purchaseDate" required>
 
-    <ul id="medList"></ul>
-  </section>
+        <button type="submit" class="primary-btn">
+          ➕ إضافة الدواء
+        </button>
 
-  <section class="about">
-    <h2>عن المشروع</h2>
-    <p>
-      Green-Pharmacy منصة ويب خضراء تعتمد على قاعدة بيانات أدوية حقيقية
-      لحساب صلاحية الدواء تلقائيًا، عرض الجرعة الصحية،
-      وتوجيه المستخدم إلى طرق التخلص البيئي الآمن،
-      مما يقلل المخاطر الصحية والهدر الدوائي.
-    </p>
-  </section>
+      </form>
 
-</main>
+      <div id="alertBox"></div>
 
-<script src="medications.js"></script>
-<script src="script.js"></script>
+      <ul id="medList"></ul>
+
+    </section>
+
+    <!-- ===== About Section (ضمن الصفحة) ===== -->
+    <section class="card">
+      <h2>عن المشروع</h2>
+
+      <p>
+        Green-Pharmacy هو تطبيق ويب ذكي يهدف إلى تحسين إدارة الأدوية المنزلية
+        من خلال الاعتماد على قاعدة بيانات طبية حقيقية لتحديد مدة الصلاحية،
+        الجرعات القياسية، وطرق التخلص البيئي السليم.
+      </p>
+
+      <ul class="features">
+        <li>✔ حساب تاريخ الانتهاء تلقائياً بناءً على مدة الصلاحية الطبية</li>
+        <li>✔ عرض الجرعة القياسية لكل دواء</li>
+        <li>✔ تقديم إرشادات التخلص البيئي الصحيح</li>
+        <li>✔ تقليل الهدر الدوائي وحماية البيئة</li>
+        <li>✔ نظام تنبيه ذكي للأدوية القريبة من الانتهاء</li>
+      </ul>
+
+    </section>
+
+  </div>
+
+  <!-- ===== Footer ===== -->
+  <footer>
+    <p>© 2026 Green-Pharmacy | Hackathon Project 🌍</p>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="medications.js"></script>
+  <script src="script.js"></script>
+
 </body>
 </html>
